namespace Domain.Models
{
    public class User
    {
        public long Id { set; get; }
    }
}