Todo network of data resource types:

@startuml

class home as "Home/Root of the API" <<H, #00FF00) >>
home : version
' home +--|> tenant : tenants
home +--|> tag : tags
home #-left-|> todoState : states
home .--|> user : me
home +--|> user : users

class tag as "tag"
tag : name
tag +--|> todo : todos

class tenant as "tenant"  <<O, #00FF00) >>
tenant : name
tenant +--|> user : users
tenant +--|> todo : todos


class todo as "todo"   <<I, #0000FF) >>
todo : many
todo : state
todo +--> todo : todos
todo #--|> todoState
todo +--|> comment : comments
todo +--|> tag : tags

class comment as "comment"
comment : many
note top
  Not implemented
end note

'
' Integration Support
' =================== 
'

class user as "User"  <<A, #00FFFF) >>
note top
  A user encapsulates the 
  concept of identity in 
  the system 
end note
user : name
user +--|> tenant : tenants
user +--|> todo : todos


'
' Enumeration resources
' =====================
'

class todoState  as "Todo States (enum)" <<E, #FF7700) >>
todoState : name
todoState : description


@enduml